fixed overlay button z-index and centered youtube vidoes vertically

--- a/frontend/src/styles/components/media-overlay.scss
+++ b/frontend/src/styles/components/media-overlay.scss
@@ -42,6 +42,7 @@
         position: absolute;
         width: 4rem;
         fill: #fefefe;
+        z-index: 1;
         
         top: 2rem;
         right: 6rem;
@@ -72,6 +73,7 @@
         border-radius: 50%;
         box-shadow: 0 .2rem .5rem rgba(0,0,0,.5);
         transition: .3s all;
+        z-index: 1;
     
         &:hover{
             box-shadow:  0 .2rem .5rem rgba(200,200,200,.5);
@@ -140,6 +142,8 @@
         padding-bottom: 45%;
         height: 0;
         background: whitesmoke;
+        top: 50%;
+        transform: translateY(-50%);
       
 
         & > div{
